--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.6",
     "base64-arraybuffer": "^0.1.4",
     "base64-arraybuffer-es6": "^0.7.0",
@@ -29,7 +30,7 @@
     "ngx-ui-loader": "^11.0.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
-    "primeng": "^12.0.0-rc.1",
+    "primeng": "^12.2.3",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "spark-md5": "^3.0.1",
